# c-shooter

./: .gitignore  CMakeLists.txt  CMakePresets.json  c-shooter.cpp  c-shooter.h  vcpkg-configuration.json  vcpkg.json
CShooter/src-shader/: basePixel.frag  baseVertex.vert
depend/glad/: glad.h
ext/: glad.c  ufbx.c
src/: main.c
src/input/: input.c  input.h
src/nuklear-backend/: nuklear_imp.c  nuklear_imp.h  opengl3.c  opengl3.h
src/scene/: scene.c  scene.h
src/scene/ent/: ent.h
src/scene/ent/test_ent/: test_ent.c  test_ent.h
src/util/: defs.h  string_t.c  string_t.h  util.c  util.h
src/util/string_allocator/: string_allocator.c  string_allocator.h
